# embedded-statistics-tracking

./: .gitignore  README.md  communication-diagram.md  package-lock.json  package.json  personal-project.c
apps/backend/: README.md  pyproject.toml  requirements.txt  start.sh  vercel.json
apps/backend/api/: index.py
apps/backend/app/: __main__.py  main.py
apps/backend/app/database/: mongodb.py
apps/backend/app/models/: sensor.py
apps/backend/app/routes/: sensors.py  test_data.py
apps/frontend/: package.json  tailwind.config.ts  vercel.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/dashboard/: SensorCards.tsx  SensorCharts.tsx
apps/frontend/hooks/: use-sensor-data.ts
apps/frontend/lib/: utils.ts
apps/frontend/types/: sensor.ts
